# event-booking

./: .env.example  .gitignore  .gitlab-ci.yml  CLAUDE.md  Dockerfile  QUEUES_DIGEST.md  pyproject.toml
.github/workflows/: publish-image.yml
docs/: API_CONTRACTS.md  AUDIT.md  DEPENDENCIES.md  SERVICE_OVERVIEW.md
event_booking/: config.py  consumer.py  ioc.py  logger.py  main.py  metrics.py  scheduler.py
event_booking/adapters/: blacklist.py  db.py  events.py  get_stream.py
event_booking/controllers/: booking.py  chat.py  meeting.py
event_booking/interfaces/: blacklist.py  db.py
tests/: conftest.py  test_consumer.py  test_health.py  test_logger.py  test_metrics.py
tests/adapters/: test_blacklist.py  test_db.py  test_get_stream.py
tests/controllers/: test_booking.py  test_meeting.py
